--- a/src/app/feature/persona/components/persona/persona.component.html
+++ b/src/app/feature/persona/components/persona/persona.component.html
@@ -5,10 +5,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#" id="linkCrearpersona" routerLink="./">persona</a>
-        <a class="nav-item nav-link" href="#" id="linkCrearpersona" routerLink="./crear">Crear persona</a>
-        <a class="nav-item nav-link" href="#" id="linkBorrarpersona" routerLink="./borrar" >Borrar persona</a>
-        <a class="nav-item nav-link" href="#" id="linkListarpersona" routerLink="./listar">listar persona</a>
+        <a class="nav-item nav-link" href="#" id="linkPersona" routerLink="./">persona</a>
+        <a class="nav-item nav-link" href="#" id="linkCrearPersona" routerLink="./crear">Crear persona</a>
+        <a class="nav-item nav-link" href="#" id="linkListarPersona" routerLink="./listar">listar persona</a>
       </div>
     </div>
   </nav>
