--- a/src/app/feature/cita/components/actualizar-cita/actualizar-cita.component.html
+++ b/src/app/feature/cita/components/actualizar-cita/actualizar-cita.component.html
@@ -1,7 +1,7 @@
 <div class="abs-center">  
     <form class="border  p-3 form" [formGroup]="citaForm">
         <div style="margin-bottom: 25px;">
-            Registrar Cita
+            Actualizar Cita
         </div>
         <div class="row">
         <div class="form-group">
@@ -16,20 +16,20 @@
         <div class="form-group">
             <label for="hora">Seleccione el horario</label>
             <select validar class="form-control" id="hora" formControlName="hora">
-              <option>08:00:00</option>
-              <option>08:30:00</option>
-              <option>09:00:00</option>
-              <option>09:30:00</option>
-              <option>10:00:00</option>
-              <option>10:30:00</option>
-              <option>11:00:00</option>
-              <option>11:30:00</option>
-              <option>14:00:00</option>
-              <option>14:30:00</option>
-              <option>15:00:00</option>
-              <option>15:30:00</option>
-              <option>16:00:00</option>
-              <option>16:30:00</option>
+                <option>08:00:00</option>
+                <option>08:30:00</option>
+                <option>09:00:00</option>
+                <option>09:30:00</option>
+                <option>10:00:00</option>
+                <option>10:30:00</option>
+                <option>11:00:00</option>
+                <option>11:30:00</option>
+                <option>14:00:00</option>
+                <option>14:30:00</option>
+                <option>15:00:00</option>
+                <option>15:30:00</option>
+                <option>16:00:00</option>
+                <option>16:30:00</option>
             </select>
           </div>
         <div class="form-group">
@@ -41,7 +41,7 @@
             {{mensajeAlertaCita}}
           </div>
         </div>
-        <button style="margin-top: 25px;" class="btn btn-primary" type="submit" (click)="registrarCita()" >Registar Cita </button>
+        <button style="margin-top: 25px;" class="btn btn-primary" type="submit" (click)="actualizarCita()" >Actualizar Cita </button>
       </form>
     </div>
 
