--- a/src/app/feature/persona/components/crear-persona/crear-persona.component.html
+++ b/src/app/feature/persona/components/crear-persona/crear-persona.component.html
@@ -3,9 +3,13 @@
     <div style="margin-bottom: 25px;">
         Registrar Persona
     </div>
+    <div>
+      <button style="margin-top: 25px;" class="btn btn-primary" type="button" id="buttonRegistrarPersona" (click)="registrarPersona()" >Registar Persona
+      </button>
+    </div>
     <div class="form-group">
         <label for="tipoDocumento">Seleccione el tipo de documento de identidad</label>
-        <select class="form-control" id="tipoDocumento" formControlName="tipoDocumento">
+        <select validar class="form-control" id="tipoDocumento" formControlName="tipoDocumento">
           <option>C.C</option>
           <option>T.I</option>
           <option>NIT</option>
@@ -13,29 +17,35 @@
       </div>
     <div class="form-group">
       <label for="documento">numero del documento</label>
-      <input type="text" class="form-control" id="documento" formControlName="documento" placeholder="">
+      <input validar type="text" class="form-control" id="documento" formControlName="documento" placeholder="">
     </div>
     <div class="form-group">
       <label for="nombre">Nombre</label>
-      <input type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="">
+      <input validar type="text" class="form-control" id="nombre" formControlName="nombre" placeholder="">
     </div>
     <div class="form-group">
         <label for="apellido">Apellido</label>
-        <input type="text" class="form-control" id="apellido" formControlName="apellido" placeholder="">
+        <input validar type="text" class="form-control" id="apellido" formControlName="apellido" placeholder="">
     </div>
     <div class="form-group">
-        <label for="fechaNacimiento">Fecha de nacimiento</label>
-        <input type="date" id="fechaNacimiento"  class="form-control"  [max]="fechaActualString" formControlName="fechaNacimiento">
+        <label  for="fechaNacimiento">Fecha de nacimiento</label>
+        <input validar type="date" id="fechaNacimiento"  class="form-control"  [max]="fechaActualString" formControlName="fechaNacimiento">
     </div>
     <div class="form-group">
         <label for="celular">Celular</label>
-        <input type="text" class="form-control" id="celular" formControlName="celular" placeholder="">
+        <input validar type="text" class="form-control" id="celular" formControlName="celular" placeholder="">
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">Email</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" formControlName="email" placeholder="">
+        <input validar type="email" class="form-control" id="email" aria-describedby="emailHelp" formControlName="email" placeholder="">
     </div>
-    <button style="margin-top: 25px;" class="btn btn-primary" type="submit" (click)="registrarPersona()" >Registar Persona
-    </button>
+    
+    <div *ngIf="mostrarMensajeAlerta" style="margin-top: 25px;">
+      <div class="alert alert-danger" role="alert">
+        {{mensajeAlertaCita}}
+      </div>
+    </div>
+    
+    
   </form>
 </div>
