--- a/src/app/feature/persona/components/listar-persona/listar-persona.component.html
+++ b/src/app/feature/persona/components/listar-persona/listar-persona.component.html
@@ -1,8 +1,20 @@
+<div>
+  <form class="border  p-3 form" [formGroup]="filtroForm">
+    <div class="form-group">
+      <label for="documento">Documento</label>
+      <input validar type="text" id="documento"  class="form-control" formControlName="documento">
+    </div>
+  <button style="margin-top: 25px;" class="btn btn-primary" type="submit" (click)="filtrarDocumento()" >filtrar por documento</button>
+  <button style="margin-top: 25px; margin-left: 10px;" class="btn btn-danger" type="submit" (click)="eliminarFiltro()" >Eliminar filtro</button>
+
+</form>
+</div>
 <p>Listado de personas</p>
 
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped" >
   <thead>
     <tr>
+      <th scope="col">Opciones</th>
       <th scope="col">Id</th>
       <th scope="col">Tipo de documento</th>
       <th scope="col">Documento</th>
@@ -11,11 +23,15 @@
       <th scope="col">Fecha de Nacimiento</th>
       <th scope="col">Celular</th>
       <th scope="col">Email</th>
-      <th scope="col">Opciones</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let item of listaPersonas | async">
+      <td>
+        <button type="button" class="btn btn-success" (click)= "actualizarPersona(item)" style="margin-right: 10px; margin-left: 10px;">Actualizar
+        </button>
+        <button type="button" class="btn btn-danger" (click)="eliminarPersona(item.id)">Eliminar</button>
+      </td>
       <th scope="row">{{ item.id }}</th>
       <td>{{ item.tipoDocumento }}</td>
       <td>{{ item.documento }}</td>
@@ -24,11 +40,6 @@
       <td>{{ item.fechaNacimiento }}</td>
       <td>{{ item.celular }}</td>
       <td>{{ item.email }}</td>
-      <td>
-        <button type="button" class="btn btn-success" (click)= "actualizarPersona()" style="margin-right: 10px; margin-left: 10px;">Actualizar
-        </button>
-        <button type="button" class="btn btn-danger" (click)="eliminarPersona(item.id)">Eliminar</button>
-      </td>
     </tr>
   </tbody>
 </table>
