--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="margen">
+    <p class="centradoTitulo">Consultorio Medico general Franklin Vasquez</p>
+    <br>
+    <p class="centrado">Te damos la bienvenida a nuestra pagina web para poder realizar aparatados de citas medicas</p>
+    <p class="centrado">ubicado en la ciudad de Cúcuta, en el Barrio La Libertad diagonal a la iglesia Sagrada Familia </p>
+    <p class="centrado">la mejor atencion para su salud por el medico general Franklin Vasquez </p>
+</div>
+
