--- a/src/app/feature/cita/components/cita/cita.component.html
+++ b/src/app/feature/cita/components/cita/cita.component.html
@@ -1,13 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Inicio</a>
+    <a class="navbar-brand" href="#" id="linkcita" routerLink="./">cita</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#" id="linkCrearcita" routerLink="./">cita</a>
-        <a class="nav-item nav-link" href="#" id="linkCrearcita" routerLink="./crear">Crear cita</a>
-        <a class="nav-item nav-link" href="#" id="linkListarcita" routerLink="./listar">listar cita</a>
+        <a class="nav-item nav-link" href="#" id="linkCrearCita" routerLink="./crear">Crear cita</a>
+        <a class="nav-item nav-link" href="#" id="linkListarCita" routerLink="./listar">listar cita</a>
       </div>
     </div>
   </nav>
