--- a/src/app/feature/cita/components/listar-cita/listar-cita.component.html
+++ b/src/app/feature/cita/components/listar-cita/listar-cita.component.html
@@ -19,6 +19,7 @@
       <th scope="col">Fecha</th>
       <th scope="col">Hora</th>
       <th scope="col">Valor</th>
+      <th scope="col">Opciones</th>
     </tr>
   </thead>
   <tbody>
