--- a/src/app/feature/persona/components/listar-persona/listar-persona.component.html
+++ b/src/app/feature/persona/components/listar-persona/listar-persona.component.html
@@ -1,3 +1,8 @@
+<div *ngIf="mostrarMensajeAlerta" style="margin-top: 25px;">
+  <div class="alert alert-danger" role="alert">
+    {{mensajeAlertaEliminarPersona}}
+  </div>
+</div>
 <div>
   <form class="border  p-3 form" [formGroup]="filtroForm">
     <div class="form-group">
@@ -14,7 +19,6 @@
 <table class="table table-bordered table-striped" >
   <thead>
     <tr>
-      <th scope="col">Opciones</th>
       <th scope="col">Id</th>
       <th scope="col">Tipo de documento</th>
       <th scope="col">Documento</th>
@@ -23,15 +27,11 @@
       <th scope="col">Fecha de Nacimiento</th>
       <th scope="col">Celular</th>
       <th scope="col">Email</th>
+      <th scope="col">Opciones</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let item of listaPersonas | async">
-      <td>
-        <button type="button" class="btn btn-success" (click)= "actualizarPersona(item)" style="margin-right: 10px; margin-left: 10px;">Actualizar
-        </button>
-        <button type="button" class="btn btn-danger" (click)="eliminarPersona(item.id)">Eliminar</button>
-      </td>
       <th scope="row">{{ item.id }}</th>
       <td>{{ item.tipoDocumento }}</td>
       <td>{{ item.documento }}</td>
@@ -40,6 +40,11 @@
       <td>{{ item.fechaNacimiento }}</td>
       <td>{{ item.celular }}</td>
       <td>{{ item.email }}</td>
+      <td>
+        <button type="button" class="btn btn-success" (click)= "actualizarPersona(item)" style="margin-right: 10px; margin-left: 10px;">Actualizar
+        </button>
+        <button type="button" class="btn btn-danger" (click)="eliminarPersona(item.id)">Eliminar</button>
+      </td>
     </tr>
   </tbody>
 </table>
