--- a/src/app/feature/cita/components/crear-cita/crear-cita.component.html
+++ b/src/app/feature/cita/components/crear-cita/crear-cita.component.html
@@ -1,14 +1,12 @@
 <div class="abs-center">  
     <form class="border  p-3 form" [formGroup]="citaForm">
-        <div style="margin-bottom: 25px;">
+        <div class="margenes">
             Registrar Cita
         </div>
-        <div class="row">
         <div class="form-group">
           <label for="descripcion">Descripcion</label>
           <input validar type="text" class="form-control" id="descripcion" formControlName="descripcion" placeholder="">
         </div>
-      </div>
         <div class="form-group">
             <label for="fecha">Fecha</label>
             <input validar type="date" id="fecha"  class="form-control"  [min]="fechaActualString" formControlName="fecha">
@@ -39,12 +37,12 @@
             <option *ngFor="let item of listaPersonas  | async" value="{{item.id}}"> {{item.documento}} ({{item.nombre}} {{item.apellido}})</option>
           </select>
         </div>
-        <div *ngIf="mostrarMensajeAlerta" style="margin-top: 25px;">
+        <div *ngIf="mostrarMensajeAlerta" class="margenes">
           <div class="alert alert-danger" role="alert">
             {{mensajeAlertaCita}}
           </div>
         </div>
-        <button style="margin-top: 25px;" class="btn btn-primary" type="submit" id="buttonRegistrarCita" (click)="registrarCita()" >Registar Cita </button>
+        <button class="btn btn-primary margenes" type="submit" id="buttonRegistrarCita" (click)="registrarCita()" >Registar Cita </button>
       </form>
     </div>
 
