--- a/src/app/feature/persona/components/actualizar-persona/actualizar-persona.component.html
+++ b/src/app/feature/persona/components/actualizar-persona/actualizar-persona.component.html
@@ -1,6 +1,6 @@
 <div class="abs-center">  
     <form class="border  p-3 form" [formGroup]="personaForm">
-      <div style="margin-bottom: 25px;">
+      <div class="margenes">
             Actualizar Persona
         </div>
         <div class="form-group">
@@ -35,12 +35,12 @@
             <label for="exampleInputEmail1">Email</label>
             <input validar type="email" class="form-control" id="email" aria-describedby="emailHelp" formControlName="email" placeholder="">
         </div>
-        <div *ngIf="mostrarMensajeAlerta" style="margin-top: 25px;">
+        <div *ngIf="mostrarMensajeAlerta" class="margenes">
           <div class="alert alert-danger" role="alert">
             {{mensajeAlertaCita}}
           </div>
         </div>
-        <button style="margin-top: 25px;" class="btn btn-primary" type="submit" id="buttonActualizarPersona" (click)="actualizarPersona()" >Actualizar Persona
+        <button class="btn btn-primary margenes" type="submit" id="buttonActualizarPersona" (click)="actualizarPersona()" >Actualizar Persona
         </button>
       </form>
     </div>
